1.1.0/_sources/developers_guide/ocean/generated/polaris.tasks.ocean.overflow.pstar_init.PStarInit.rst.txt
polaris.tasks.ocean.overflow.pstar\_init.PStarInit
==================================================

.. currentmodule:: polaris.tasks.ocean.overflow.pstar_init

.. autoclass:: PStarInit

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~PStarInit.__init__
      ~PStarInit.add_dependency
      ~PStarInit.add_horiz_mesh_input_file
      ~PStarInit.add_init_input_file
      ~PStarInit.add_input_file
      ~PStarInit.add_output_file
      ~PStarInit.add_output_files_for_ocean_model_input
      ~PStarInit.add_produced_file
      ~PStarInit.add_property_check
      ~PStarInit.add_vert_coord_input_file
      ~PStarInit.check_properties
      ~PStarInit.constrain_resources
      ~PStarInit.get_horiz_mesh_filename
      ~PStarInit.get_init_filename
      ~PStarInit.get_vert_coord_filename
      ~PStarInit.init_tracers
      ~PStarInit.map_from_native_model_vars
      ~PStarInit.map_to_native_model_vars
      ~PStarInit.open_model_dataset
      ~PStarInit.open_vert_coord_dataset
      ~PStarInit.process_inputs_and_outputs
      ~PStarInit.run
      ~PStarInit.run_pstar_init
      ~PStarInit.runtime_setup
      ~PStarInit.set_resources
      ~PStarInit.set_shared_config
      ~PStarInit.setup
      ~PStarInit.validate_baselines
      ~PStarInit.work_path
      ~PStarInit.write_horiz_mesh_dataset
      ~PStarInit.write_initial_state_dataset
      ~PStarInit.write_model_dataset
      ~PStarInit.write_vert_coord_dataset
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~PStarInit.cores
      ~PStarInit.gpus
      ~PStarInit.may_span_nodes
      ~PStarInit.min_cores
      ~PStarInit.min_gpus
      ~PStarInit.component
      ~PStarInit.config
      ~PStarInit.input_data
      ~PStarInit.logger
   
   